# ComputerVisionTasks

./: .gitignore  AlexNet.ipynb  ConvNets.ipynb  main.py  pyproject.toml  training_classification.py  training_detection.py
classification/: ConvNets.ipynb
convolution_models/: AlexNet.py  ConvNext.py  DenseNet.py  GoogLeNet.py  LeNet5.py  MobileNet_v1.py  MobileNet_v2.py  ResNet34.py  ResNext.py  Xception.py  __init__.py
models/: AlexNet.py  ConvNext.py  DenseNet.py  GoogLeNet.py  LeNet5.py  MobileNet_v1.py  MobileNet_v2.py  ResNet34.py  ResNet50.py  ResNext.py  VGG16.py  Xception.py  useful_links
models/classification_convolution/: DenseNet.py  ResNet50.py  VGG16.py  __init__.py
models/classification_transformer/: CPVT.py  PVT.py  SwinT.py  T2T.py  TNT.py  ViT.py  __init__.py
models/classification_vision_transformers/: T2T.py  TNT.py
models/detection_convolution/: FasterRCNN.py  FasterRCNN_utils.py  RCNN.py  SSD.py  SSD300.py  SSD300_utils.py  SSD_utils.py  YOLO_Simplified.py  __init__.py
models/detection_transformer/: DETR.py  __init__.py
models/segmentation_convolution/: DeepLabV3+.py  PSPNet.py  SegNet.py  Unet.py  __init__.py
models/segmentation_transformer/: MaskFormer.py
tasks/: utils.py
tasks/classification/cifar10/: model_configs.py  training.py  training_results.ipynb
tasks/detection/: utils.py
tasks/detection/PascalVOC/: detecting.py  training.py
trainings/cifar10/: cifar_training.py  model_configs.py  training.py  training_results.ipynb
utils/: cifar_training.py
vision_transformers/: CPVT.py  CVT.py  CvT.py  SwinT.py  ViT.py
(+71 files in other folders)
